tests/checker/diagnostics/0993_mli_unary_type_overapplied_09.mli.infer.expected
File "0993_mli_unary_type_overapplied_09.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0993_mli_unary_type_overapplied_09 is not a valid module name.

File "0993_mli_unary_type_overapplied_09.mli", line 2, characters 13-34:
2 | val x_iota : (int, bool) wrap_iota
                 ^^^^^^^^^^^^^^^^^^^^^
Error: The type constructor wrap_iota expects 1 argument(s),
       but is here applied to 2 argument(s)
